<resources>
    <string name="app_name">Warsaw City Game</string>
    <string name="applicationLogo">application logo</string>
    <string name="imageDesc">image</string>
    <string name="LoginText">Login:</string>
    <string name="PasswordText">Password:</string>
    <string name="LogIntoText">Log in</string>
    <string name="RegisterDescriptionText">Don\'t have an account?</string>
    <string name="RegisterText">Register</string>
    <string name="ForceRegisterText">Register</string>
    <string name="hello">Hello World, MainActivity!</string>
    <color name="White">#FFFFFF</color>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="menu_settings">Settings</string>
    <string name="ranklabel">"Rank : "</string>
    <string name="levellabel">"Level : "</string>
    <string name="namelabel">"Name : "</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="menu_titles">
        <item>Current mission</item>
        <item>Profile</item>
        <item>Friends</item>
        <item>Get mission</item>
        <item>History</item>
        <item>Achievements</item>
        <item>Hall of fame</item>
        <item>Log out</item>
        <item>About</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="menu_icons">
        <!-- i will add it ASAP. working on it. currently not showing -->
        <item>@drawable/currentmission</item>
        <item>@drawable/profile</item>
        <item>@drawable/friends</item>
        <item>@drawable/getmission</item>
        <item>@drawable/achievements</item>
        <item>@drawable/achievements</item>
        <item>@drawable/halloffame</item>
        <item>@drawable/logout</item>
        <item>@drawable/profile</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="backTxt">BACK</string>
    <string name="dummyTxt">There is something about a Martini,\n A tingle remarkably pleasant;\n A yellow, a mellow Martini;\n I wish I had one at present.</string>
    <string name="missionTxt">Kalesch the orc leader in front of the temple of Mora Sul, requires all five keys for opening the temple. One of them is in his possession, already. As he doesn\'t want to enter Mora Sul, he will order you to retrieve the missing four keys for him.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="google_maps_key">AIzaSyDBfIN4wq9pPx3anzqnsblT0X_Sz2gRAvA</string>
    <string name="google_app_id">128021</string>
    <string name="login_failed">Login failed</string>
    <string name="missionAcomplishedMessage">Mission accomplished, Well Done !</string>
    <string name="missionSettingSuccess">Mission added !</string>
    <string name="title_activity_crop_user_image">CropUserImageActivity</string>
    <string name="loadImageText">Load Image</string>
    <string name="updateProfileImageText">Update profile image</string>
    <string name="enterEmailText">Enter new email</string>
    <string name="enterLoginText">Enter new login</string>
    <string name="enterNewDescription">Enter new description</string>
    <string name="writeOldPasswordText">Podaj stare hasło:</string>
    <string name="writeNewPasswordText">Podaj nowe hasło</string>
    <string name="changePasswordFailedText">Cannot change user password</string>
    <string name="successChangingPasswordText">Successfully changed user password</string>
    <string name="errorChangingPasswordText">Cannot change user password</string>
    <string name="successChangedPasswordText">Successfully changed user password.</string>
    <string name="errorChangingUserDataText">Cannot change user data</string>
    <string name="successChangingUserDatatext">Successfully changed user data</string>
    <string name="errorChangingUserData">Cannot change user data</string>
    <string name="successChangedUserDataText">Successfully changed user data</string>
    <string name="loginFailedDescription">Make sure your credentials are correct and try again. Login failed.</string>
    <string name="loginFailedtext">An error occured</string>
    <string name="removePhotoText">REMOVE PHOTO</string>
    <string name="addFriendText">Add a friend</string>
    <string name="yourFriendsText">Your friends</string>
    <string name="connectionErrorText">An error occured. Make sure your connection is valid and try again.</string>
    <string name="errorText">Error</string>
    <string name="backText">BACK</string>
    <string name="removeFriendText">REMOVE FRIEND</string>
    <string name="addFriendText2">ADD FRIEND</string>
    <string name="findPlayerText">Find player</string>
    <string name="success_account_registered">Registered. Logging..</string>
    <string name="welcomeText">Welcome :)</string>
    <string name="sampleDescriptionTxt">Sample description</string>
    <string name="showOnMapText">SHOW ON MAP</string>
    <string name="detailsText">DETAILS</string>
    <string name="acceptMissionText">ACCEPT MISSION</string>
    <string name="hereYouAreText">HERE YOU ARE</string>
    <string name="destinationText">DESTINATION</string>
</resources>
