<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <com.warsawcitygame.CustomControls.KenBurnsView
        android:id="@+id/splash_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerVertical="true"
        android:id="@+id/loginElementsLayout"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".37"
                android:text="@string/LoginText"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:id="@+id/textView"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight=".63"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:id="@+id/login"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".37"
                android:textSize="20sp"
                android:text="@string/PasswordText"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:id="@+id/editText2"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight=".63"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:id="@+id/password"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:text="@string/LogIntoText"
                android:id="@+id/login_button"
                android:fontFamily="sans-serif-light"
                style="@style/roundedbuttontransparent"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/RegisterDescriptionText"
                android:id="@+id/textView3"
                android:textAlignment="center"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:text="@string/RegisterText"
                android:fontFamily="sans-serif-light"
                android:id="@+id/register_button"
                style="@style/roundedbuttontransparent"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

