<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <com.warsawcitygame.CustomControls.KenBurnsView
        android:id="@+id/splash_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerVertical="true"
        android:id="@+id/registerElementsLayout">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:maxLength="20"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LoginText"
                android:id="@+id/textView"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:text="@string/PasswordText"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="20"
                android:ems="10"
                android:id="@+id/password"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:text="Email"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:maxLength="40"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backTxt"
                android:id="@+id/back_button"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                style="@style/roundedbuttontransparent"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ForceRegisterText"
                android:fontFamily="sans-serif-light"
                android:textColor="#FFFFFF"
                android:id="@+id/register_button"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                style="@style/roundedbuttontransparent"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>